Release notes by PHOCOA version number.

Legend:
[bugfix] - Bug fix.
[new] - New feature.
[BC-break] - Backwards-compatibility may be broken. Update your code to "the new way" as noted.
[BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.

Version 0.2.4 - ??
- [new] Add class attribute support to WFSelect.
- [new] Add errorCodesForKey() method to WFErrorsException to make looking for certain errors easier for test writing.
- [new] Add createTestStub phocoa task to create test stubs for PHPUnit.
- [new] Add Forgotten Password link in "login error message" as well.
- [bugfix] Fix a couple of bugs that caused .htaccess support to be broken in "newProject" runs.

Version 0.2.3 - 4/22/2009
- [new] Automatically activate the username field on the login module.
- [new] Fixtures improvements: Add support for "named objects" in to-many relationships.
- [new] Add WFFormatter smarty plugin to allow use of the PHOCOA formatting infrastructure directly in templates.
- [new] Added "class" support to WFPassword.
- Add comments
- [new] Add labelPosition property to WFCheckbox for controlling position of <label> in relation to <input>. 'left' or 'right'.
- [bugfix] Fixed bug where restoreState was getting called even if the current widget isn't on a form that was submitted. This caused side effects such as "restoring" the incorrect (uninitailized) state of WFSelectionCheckbox.
- [new] Refactor WFKeyValueValidators to take an optional 4th parameter "options" that allows extra info to be passed to built-in validators. BC-safe.

Version 0.2.2 - 3/5/2009
- minor tweaks.

Version 0.2.1 - 2/19/2008
- [new] Add KVC method setValuesForKeys()
- [new] Add experimental inter-property validation mechanism, see KVC method validateObject().
- [new] Add addErrors() convenience methods to WFPage and WFWidget.
- [new] WFPage now catches WFErrorsException when thrown from action methods and automatically adds all errors to the page.