@@ -7,6 +7,9 @@ Legend:
 [BC-deprecated] - Backwards-compatibility mode supported, but deprecated. Update your code to "the new way" as noted.
 
 Version 0.2.4 - ??
+- [new] ServerAction now includes all RPC paramaters in the request.
+- [new] Added a modifier to onEvent: x do s!:actionName (the ! means runsIfInvalid=true)
+- [bc-break] If an RPC is detected and runsIfInvalid=true then the page's ignoreErrors() will default to true. This prevents any errors from showing on the page. This is the normative use case for ServerAction, but it could cause a BC problem if anyone is using runsIfInvalid=true and expecting errors to be displayed (doubtful that this affects anyone).
 - [new] Add class attribute support to WFSelect.
 - [new] Add errorCodesForKey() method to WFErrorsException to make looking for certain errors easier for test writing.
 - [new] Add createTestStub phocoa task to create test stubs for PHPUnit.
